Onboarding scherm 1 structuur af

--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -174,7 +174,17 @@
                         </g>
                     </g>
                 </svg>
-
+            </div>
+        </div>
+        <div class="o-container-index">
+            <div class="o-tekst-index">
+                <h2>Welkom</h2>
+                <p>We hebben als team project interactieve paaltjes gemaakt</p>
+            </div>
+        </div>
+        <div class="o-container-index">
+            <div class="o-button-index">
+                <button class="o-button-layout-index">Volgende</button>
             </div>
         </div>
     </main>
