--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="css/screen.css">
+    <script src="scripts/app.js"></script>
 </head>
 <body>
     <main>
@@ -184,7 +185,7 @@
         </div>
         <div class="o-container-index">
             <div class="o-button-index">
-                <button class="o-button-layout-index">Volgende</button>
+                <button class="o-button-layout-index js-button">Volgende</button>
             </div>
         </div>
     </main>
