--- a/Frontend/home.html
+++ b/Frontend/home.html
@@ -21,5 +21,10 @@
             <div class="grid-item">4</div>
         </div>
     </main>
+    <footer class="o-footer">
+        <div><p>Home</p></div>
+        <div><p>Scoreboard</p></div>
+        <div><p>over ons</p></div>
+    </footer>
 </body>
 </html>
