feat: basic template

--- a/Testing/testing.html
+++ b/Testing/testing.html
@@ -12,18 +12,10 @@
   <body>
     <div class="container">
       <div class="led-container">
-        <svg class="led" id="led-1" viewBox="0 0 100 100" stroke="black" stroke-width="3" opacity="0.3">
-          <circle cx="50" cy="50" r="40" fill="red"></circle>
-        </svg>
-        <svg class="led" id="led-2" viewBox="0 0 100 100" stroke="black" stroke-width="3" opacity="0.3">
-          <circle cx="50" cy="50" r="40" fill="yellow"></circle>
-        </svg>
-        <svg class="led" id="led-3" viewBox="0 0 100 100" stroke="black" stroke-width="3" opacity="0.3">
-          <circle cx="50" cy="50" r="40" fill="green"></circle>
-        </svg>
-        <svg class="led" id="led-4" viewBox="0 0 100 100" stroke="black" stroke-width="3" opacity="0.3">
-          <circle cx="50" cy="50" r="40" fill="blue"></circle>
-        </svg>
+        <div class="led" id="led-1"></div>
+        <div class="led" id="led-2"></div>
+        <div class="led" id="led-3"></div>
+        <div class="led" id="led-4"></div>
       </div>
       <div class="button-container">
         <button class="js-button-led" data-led-id="1">Red</button>
