feat: aanpassingen index

--- a/Testing/testing.html
+++ b/Testing/testing.html
@@ -10,6 +10,7 @@
     <script src="testing.js"></script>
   </head>
   <body>
+    <h1 id="memorypoints">0</h1>
     <div class="container">
       <div class="led-container">
         <div class="led" id="led-1"></div>
@@ -18,10 +19,10 @@
         <div class="led" id="led-4"></div>
       </div>
       <div class="button-container">
-        <button class="js-button-led" data-led-id="1">Red</button>
-        <button class="js-button-led" data-led-id="2">Yellow</button>
-        <button class="js-button-led" data-led-id="3">Green</button>
-        <button class="js-button-led" data-led-id="4">Blue</button>
+        <button class="js-button-led" data-led-id="0">Red</button>
+        <button class="js-button-led" data-led-id="1">Yellow</button>
+        <button class="js-button-led" data-led-id="2">Green</button>
+        <button class="js-button-led" data-led-id="3">Blue</button>
       </div>
       <div class="button-container">
         <button class="js-button-game" data-game-id="memory">memory</button>
