--- a/Frontend/ranking.html
+++ b/Frontend/ranking.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Home | Interactieve paaltjes</title>
+    <title>Ranking | Interactieve paaltjes</title>
     <meta name="description" content="Speel onze interactieve paaltjes">
 
     <link rel="icon" href="img/logos/favicon.svg" />
@@ -17,24 +17,31 @@
     <script src="script/datahandler.js"></script>
     <script src="script/app.js"></script>
   </head>
-  <body>
+<body>
     <main>
-      <div class="o-container-home">
-        <div class="o-margin-top-home">
-          <h1>Kies hier jouw spel om te beginnen.</h1>
+        <div class="o-container-home">
+            <div class="o-margin-top-home">
+                <h1>Kies het scorebord dat je wil bekijken.</h1>
+            </div>
         </div>
-      </div>
-      <div class="grid-container">
-        <div class="grid-item">1</div>
-        <div class="grid-item">2</div>
-        <div class="grid-item">3</div>
-        <div class="grid-item">4</div>
-      </div>
+        <div class="grid-container">
+            <div class="grid-item">1</div>
+            <div class="grid-item">2</div>
+            <div class="grid-item">3</div>
+            <div class="grid-item">4</div>
+        </div>
     </main>
     <footer class="o-footer">
-      <div><p>Home</p></div>
-      <div><p>Scoreboard</p></div>
-      <div><p>over ons</p></div>
+        <div>
+            <p>Home</p>
+        </div>
+        <div>
+            <p>Scoreboard</p>
+        </div>
+        <div>
+            <p>over ons</p>
+        </div>
     </footer>
-  </body>
+</body>
+
 </html>
