--- a/Frontend/eindscore.html
+++ b/Frontend/eindscore.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Home | Interactieve paaltjes</title>
+    <title>Behaalde score | Interactieve paaltjes</title>
     <meta name="description" content="Speel onze interactieve paaltjes">
 
     <link rel="icon" href="img/logos/favicon.svg" />
@@ -17,24 +17,32 @@
     <script src="script/datahandler.js"></script>
     <script src="script/app.js"></script>
   </head>
-  <body>
-    <main>
-      <div class="o-container-home">
-        <div class="o-margin-top-home">
-          <h1>Kies hier jouw spel om te beginnen.</h1>
+<body>
+    <div>
+        <h3>Score</h3>
+        <h2>150</h2>
+    </div>
+    <div>
+        <h1>Memory game</h1>
+    </div>
+    <div>
+        <div>
+            <h3>Ingedrukte knoppen</h3>
+            <p>12</p>
         </div>
-      </div>
-      <div class="grid-container">
-        <div class="grid-item">1</div>
-        <div class="grid-item">2</div>
-        <div class="grid-item">3</div>
-        <div class="grid-item">4</div>
-      </div>
-    </main>
-    <footer class="o-footer">
-      <div><p>Home</p></div>
-      <div><p>Scoreboard</p></div>
-      <div><p>over ons</p></div>
+        <div>
+            <h3>Gespeelde tijd</h3>
+            <p>5 min</p>
+        </div>
+        <div>
+            <h3>Niveau</h3>
+            <p>7</p>
+        </div>
+    </div>
+    <footer>
+        <div><p>Home</p></div>
+        <div><p>Scorebord</p></div>
+        <div><p>Opnieuw</p></div>
     </footer>
-  </body>
+</body>
 </html>
