making over ons page

--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -94,7 +94,7 @@
       </header>
       <section class="o-row">
         <div class="o-container">
-          <h1 class="c-title">Let's play</h1>
+          <h1 class="c-title">Let's play &#128512;</h1>
           <div class="c-games">
             <button class="c-game o-button-reset">
               <div class="c-game__icon">
@@ -107,17 +107,17 @@
                   </g>
                 </svg>
               </div>
-              <div class="c-game__info-btn">
+              <div class="c-game__info-btn js-info-btn" data-game="bluevsred">
                 <svg class="c-icon" width="24" height="24" viewBox="0 0 48 48" fill="black" stroke="black">
                   <path
                     d="M24 44C29.5228 44 34.5228 41.7614 38.1421 38.1421C41.7614 34.5228 44 29.5228 44 24C44 18.4772 41.7614 13.4772 38.1421 9.85786C34.5228 6.23858 29.5228 4 24 4C18.4772 4 13.4772 6.23858 9.85786 9.85786C6.23858 13.4772 4 18.4772 4 24C4 29.5228 6.23858 34.5228 9.85786 38.1421C13.4772 41.7614 18.4772 44 24 44Z"
                     fill="none"
-                    stroke-width="2"
+                    stroke-width="4"
                     stroke-linejoin="round"
                   />
                   <path fill-rule="evenodd" stroke-width="0" clip-rule="evenodd" d="M24 11C25.3807 11 26.5 12.1193 26.5 13.5C26.5 14.8807 25.3807 16 24 16C22.6193 16 21.5 14.8807 21.5 13.5C21.5 12.1193 22.6193 11 24 11Z" />
-                  <path d="M24.5 34V20H23.5H22.5" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
-                  <path d="M21 34H28" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
+                  <path d="M24.5 34V20H23.5H22.5" stroke-width="4" stroke-linecap="round" stroke-linejoin="round" />
+                  <path d="M21 34H28" stroke-width="4" stroke-linecap="round" stroke-linejoin="round" />
                 </svg>
               </div>
               <div class="c-game__title">BLUE VS RED</div>
@@ -133,17 +133,17 @@
                   <path d="M24 28H18" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
                 </svg>
               </div>
-              <div class="c-game__info-btn">
-                <svg class="c-icon" width="24" height="24" viewBox="0 0 48 48">
+              <div class="c-game__info-btn js-info-btn" data-game="zengame">
+                <svg class="c-icon" width="24" height="24" viewBox="0 0 48 48" fill="black" stroke="black">
                   <path
                     d="M24 44C29.5228 44 34.5228 41.7614 38.1421 38.1421C41.7614 34.5228 44 29.5228 44 24C44 18.4772 41.7614 13.4772 38.1421 9.85786C34.5228 6.23858 29.5228 4 24 4C18.4772 4 13.4772 6.23858 9.85786 9.85786C6.23858 13.4772 4 18.4772 4 24C4 29.5228 6.23858 34.5228 9.85786 38.1421C13.4772 41.7614 18.4772 44 24 44Z"
                     fill="none"
-                    stroke-width="2"
+                    stroke-width="4"
                     stroke-linejoin="round"
                   />
                   <path fill-rule="evenodd" stroke-width="0" clip-rule="evenodd" d="M24 11C25.3807 11 26.5 12.1193 26.5 13.5C26.5 14.8807 25.3807 16 24 16C22.6193 16 21.5 14.8807 21.5 13.5C21.5 12.1193 22.6193 11 24 11Z" />
-                  <path d="M24.5 34V20H23.5H22.5" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
-                  <path d="M21 34H28" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
+                  <path d="M24.5 34V20H23.5H22.5" stroke-width="4" stroke-linecap="round" stroke-linejoin="round" />
+                  <path d="M21 34H28" stroke-width="4" stroke-linecap="round" stroke-linejoin="round" />
                 </svg>
               </div>
               <div class="c-game__title">ZEN GAME</div>
@@ -165,17 +165,17 @@
                   <path d="M24 44H16" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
                 </svg>
               </div>
-              <div class="c-game__info-btn">
+              <div class="c-game__info-btn js-info-btn" data-game="minesweeper">
                 <svg class="c-icon" width="24" height="24" viewBox="0 0 48 48" fill="black" stroke="black">
                   <path
                     d="M24 44C29.5228 44 34.5228 41.7614 38.1421 38.1421C41.7614 34.5228 44 29.5228 44 24C44 18.4772 41.7614 13.4772 38.1421 9.85786C34.5228 6.23858 29.5228 4 24 4C18.4772 4 13.4772 6.23858 9.85786 9.85786C6.23858 13.4772 4 18.4772 4 24C4 29.5228 6.23858 34.5228 9.85786 38.1421C13.4772 41.7614 18.4772 44 24 44Z"
                     fill="none"
-                    stroke-width="2"
+                    stroke-width="4"
                     stroke-linejoin="round"
                   />
                   <path fill-rule="evenodd" stroke-width="0" clip-rule="evenodd" d="M24 11C25.3807 11 26.5 12.1193 26.5 13.5C26.5 14.8807 25.3807 16 24 16C22.6193 16 21.5 14.8807 21.5 13.5C21.5 12.1193 22.6193 11 24 11Z" />
-                  <path d="M24.5 34V20H23.5H22.5" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
-                  <path d="M21 34H28" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
+                  <path d="M24.5 34V20H23.5H22.5" stroke-width="4" stroke-linecap="round" stroke-linejoin="round" />
+                  <path d="M21 34H28" stroke-width="4" stroke-linecap="round" stroke-linejoin="round" />
                 </svg>
               </div>
               <div class="c-game__title">MINE SWEEPER</div>
@@ -193,17 +193,17 @@
                   </g>
                 </svg>
               </div>
-              <div class="c-game__info-btn">
+              <div class="c-game__info-btn js-info-btn" data-game="memorygame">
                 <svg class="c-icon" width="24" height="24" viewBox="0 0 48 48" fill="black" stroke="black">
                   <path
                     d="M24 44C29.5228 44 34.5228 41.7614 38.1421 38.1421C41.7614 34.5228 44 29.5228 44 24C44 18.4772 41.7614 13.4772 38.1421 9.85786C34.5228 6.23858 29.5228 4 24 4C18.4772 4 13.4772 6.23858 9.85786 9.85786C6.23858 13.4772 4 18.4772 4 24C4 29.5228 6.23858 34.5228 9.85786 38.1421C13.4772 41.7614 18.4772 44 24 44Z"
                     fill="none"
-                    stroke-width="2"
+                    stroke-width="4"
                     stroke-linejoin="round"
                   />
                   <path fill-rule="evenodd" stroke-width="0" clip-rule="evenodd" d="M24 11C25.3807 11 26.5 12.1193 26.5 13.5C26.5 14.8807 25.3807 16 24 16C22.6193 16 21.5 14.8807 21.5 13.5C21.5 12.1193 22.6193 11 24 11Z" />
-                  <path d="M24.5 34V20H23.5H22.5" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
-                  <path d="M21 34H28" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
+                  <path d="M24.5 34V20H23.5H22.5" stroke-width="4" stroke-linecap="round" stroke-linejoin="round" />
+                  <path d="M21 34H28" stroke-width="4" stroke-linecap="round" stroke-linejoin="round" />
                 </svg>
               </div>
               <div class="c-game__title">MEMORY GAME</div>
@@ -217,45 +217,76 @@
           <nav class="c-tabbar">
             <ul class="o-list c-tabbar__items">
               <li class="c-tabbar__item">
-                <button class="c-tabbar__label o-button-reset is-active">
-                  <svg class="c-tabbar__icon" width="24" height="24" viewBox="0 0 48 48" fill="none" stroke="black">
-                    <path d="M9 18V42H39V18L24 6L9 18Z" fill="none" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
-                    <path d="M19 29V42H29V29H19Z" fill="none" stroke-width="2" stroke-linejoin="round" />
-                    <path d="M9 42H39" stroke-width="2" stroke-linecap="round" />
-                  </svg>
-                  <span class="c-tabbar__text">Home</span>
+                <button class="c-tabbar__btn o-button-reset is-active js-tabs" data-page="home">
+                  <div class="c-tabbar__symbol">
+                    <svg class="c-tabbar__icon" width="24" height="24" viewBox="0 0 48 48" fill="none" stroke="black">
+                      <path d="M9 18V42H39V18L24 6L9 18Z" fill="none" stroke-width="3" stroke-linecap="round" stroke-linejoin="round" />
+                      <path d="M19 29V42H29V29H19Z" fill="none" stroke-width="3" stroke-linejoin="round" />
+                      <path d="M9 42H39" stroke-width="3" stroke-linecap="round" />
+                    </svg>
+                  </div>
                 </button>
+                <span class="c-tabbar__text">Home</span>
               </li>
               <li class="c-tabbar__item">
-                <button class="c-tabbar__label o-button-reset">
-                  <svg class="c-tabbar__icon" width="24" height="24" viewBox="0 0 48 48" fill="none"  stroke="black">
-                    <path d="M17 18H4V42H17V18Z" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
-                    <path d="M30 6H17V42H30V6Z" stroke-width="2" stroke-linejoin="round" />
-                    <path d="M43 26H30V42H43V26Z" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
-                  </svg>
-                  <span class="c-tabbar__text">Rangschikking</span>
+                <button class="c-tabbar__btn o-button-reset js-tabs" data-page="rangschikking">
+                  <div class="c-tabbar__symbol">
+                    <svg class="c-tabbar__icon" width="24" height="24" viewBox="0 0 48 48" fill="none" stroke="black">
+                      <path d="M17 18H4V42H17V18Z" stroke-width="3" stroke-linecap="round" stroke-linejoin="round" />
+                      <path d="M30 6H17V42H30V6Z" stroke-width="3" stroke-linejoin="round" />
+                      <path d="M43 26H30V42H43V26Z" stroke-width="3" stroke-linecap="round" stroke-linejoin="round" />
+                    </svg>
+                  </div>
                 </button>
+                <!-- <span class="c-tabbar__text">Rangschikking</span> -->
               </li>
               <li class="c-tabbar__item">
-                <button class="c-tabbar__label o-button-reset">
-                  <svg class="c-tabbar__icon" width="24" height="24" viewBox="0 0 48 48" fill="black" stroke="black">
-                    <path
-                      d="M24 44C29.5228 44 34.5228 41.7614 38.1421 38.1421C41.7614 34.5228 44 29.5228 44 24C44 18.4772 41.7614 13.4772 38.1421 9.85786C34.5228 6.23858 29.5228 4 24 4C18.4772 4 13.4772 6.23858 9.85786 9.85786C6.23858 13.4772 4 18.4772 4 24C4 29.5228 6.23858 34.5228 9.85786 38.1421C13.4772 41.7614 18.4772 44 24 44Z"
-                      fill="none"
-                      stroke-width="2"
-                      stroke-linejoin="round"
-                    />
-                    <path fill-rule="evenodd" stroke-width="0" clip-rule="evenodd" d="M24 11C25.3807 11 26.5 12.1193 26.5 13.5C26.5 14.8807 25.3807 16 24 16C22.6193 16 21.5 14.8807 21.5 13.5C21.5 12.1193 22.6193 11 24 11Z" />
-                    <path d="M24.5 34V20H23.5H22.5" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
-                    <path d="M21 34H28" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
-                  </svg>
-                  <span class="c-tabbar__text">Over ons</span>
+                <button class="c-tabbar__btn o-button-reset js-tabs" data-page="overons">
+                  <div class="c-tabbar__symbol">
+                    <svg class="c-tabbar__icon" width="24" height="24" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <path
+                        d="M24 44C29.5228 44 34.5228 41.7614 38.1421 38.1421C41.7614 34.5228 44 29.5228 44 24C44 18.4772 41.7614 13.4772 38.1421 9.85786C34.5228 6.23858 29.5228 4 24 4C18.4772 4 13.4772 6.23858 9.85786 9.85786C6.23858 13.4772 4 18.4772 4 24C4 29.5228 6.23858 34.5228 9.85786 38.1421C13.4772 41.7614 18.4772 44 24 44Z"
+                        fill="none"
+                        stroke="#333"
+                        stroke-width="3"
+                        stroke-linejoin="round"
+                      />
+                      <path
+                        class="fill-point"
+                        fill-rule="evenodd"
+                        stroke-width="0"
+                        clip-rule="evenodd"
+                        d="M24 11C25.3807 11 26.5 12.1193 26.5 13.5C26.5 14.8807 25.3807 16 24 16C22.6193 16 21.5 14.8807 21.5 13.5C21.5 12.1193 22.6193 11 24 11Z"
+                        fill="#333"
+                      />
+                      <path d="M24.5 34V20H23.5H22.5" stroke="#333" stroke-width="3" stroke-linecap="round" stroke-linejoin="round" />
+                      <path d="M21 34H28" stroke="#333" stroke-width="3" stroke-linecap="round" stroke-linejoin="round" />
+                    </svg>
+                  </div>
                 </button>
+                <!-- <span class="c-tabbar__text">Over ons</span> -->
               </li>
             </ul>
           </nav>
         </div>
       </section>
     </main>
+    <!-- popup -->
+    <div class="c-popup">
+      <div class="c-popup__content">
+        <div class="c-popup__header">
+          <div class="o-layout o-layout--justify-space-between o-layout--align-baseline">
+            <h2 class="c-popup__title js-popup-title">Memory Game</h2>
+            <button class="c-popup__close o-button-reset js-popup-close">
+              <svg class="c-icon--sm" width="24" height="24" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M8 8L40 40" stroke="#333" stroke-width="3" stroke-linecap="round" stroke-linejoin="round" />
+                <path d="M8 40L40 8" stroke="#333" stroke-width="3" stroke-linecap="round" stroke-linejoin="round" />
+              </svg>
+            </button>
+          </div>
+          <p class="c-popup__discription js-popup-discription">Probeer de getoonde sequentie zo lang mogelijk na te doen door de juiste paaltjes aan te klikken. Er zal telkens een extra LED oplichten.</p>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
