--- a/Frontend/over-ons.html
+++ b/Frontend/over-ons.html
@@ -94,11 +94,21 @@
       </header>
       <section class="o-row">
         <div class="o-container">
-          <!-- &#128512 emoji -->
-          <h1 class="c-title">Over ons &#129299;</h1>
-          <p></p>
-          <p></p>
-          <p></p>
+          <div class="c-about u-max-width-sm">
+            <h1 class="c-title">Over ons &#129299;</h1>
+            <p class="c-about__text">
+              Dit project werd gemaakt door <span class="u-fw-bold">5 MCT studenten</span> aan de Howest in Kortrijk. Het project werd gemaakt door <span class="u-fw-bold">Lei Jin, Bart Roels, Jens Lagae, Ilias Es-Sahili en Ruben Pattyn.</span>
+            </p>
+            <p class="c-about__text">
+              Voor ons team project maakten we <span class="u-fw-bold">4 verschillende spellen</span> met behulp van interactieve paaltjes. De paaltjes zijn verbonden met een webapp. Zo kunnen de spellen gestart worden via de smartphone of pc. Voor ieder spel is er een scorebord
+              beschikbaar. Dit doen we met de doelstelling om kinderen aan te zetten tot beweging.
+            </p>
+            <p class="c-about__text">Dit team project doen we in opdracht van de <span class="u-fw-bold">sportinnovatiecampus Brugge van de Howest</span>.</p>
+            <div class="c-about__logos">
+              <img class="c-logo" src="img/logos/main_logo.svg" alt="logo sportinnovatiecampus howest" />
+              <img class="c-logo" src="img/logos/howest.png" alt="logo howest" />
+            </div>
+          </div>
         </div>
       </section>
       <!-- navigation bar -->
