--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -96,7 +96,7 @@
         <div class="o-container">
           <h1 class="c-title">Let's play &#128512;</h1>
           <div class="c-games">
-            <button class="c-game o-button-reset">
+            <button class="c-game o-button-reset js-selected-game" data-game="bluevsred">
               <div class="c-game__icon">
                 <svg class="c-icon--lg" width="77" height="77" viewBox="0 0 77 77">
                   <g transform="translate(-286.5 -347.5)">
@@ -122,7 +122,7 @@
               </div>
               <div class="c-game__title">BLUE VS RED</div>
             </button>
-            <button class="c-game o-button-reset">
+            <button class="c-game o-button-reset js-selected-game" data-game="zengame">
               <div class="c-game__icon">
                 <svg class="c-icon--lg u-color-zen-game" width="24" height="24" viewBox="0 0 48 48" fill="none">
                   <circle cx="24" cy="28" r="16" fill="none" stroke-width="2" />
@@ -148,7 +148,7 @@
               </div>
               <div class="c-game__title">ZEN GAME</div>
             </button>
-            <button class="c-game o-button-reset">
+            <button class="c-game o-button-reset js-selected-game" data-game="minesweeper">
               <div class="c-game__icon u-color-mine-sweeper">
                 <svg class="c-icon--lg" width="24" height="24" viewBox="0 0 48 48" fill="none">
                   <path
@@ -180,7 +180,7 @@
               </div>
               <div class="c-game__title">MINE SWEEPER</div>
             </button>
-            <button class="c-game o-button-reset">
+            <button class="c-game o-button-reset js-selected-game" data-game="memorygame">
               <div class="c-game__icon">
                 <svg class="c-icon--lg" width="75" height="75" viewBox="0 0 75 75">
                   <g transform="translate(-254.5 -305.5)">
